Se adaptaron los height de las tarjetas anillos para que el texto entre correctamente y sea legible en un dispositivo  mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -164,7 +164,7 @@ h2 {
   text-align: center;
   font-size: 1.2rem;
   font-family: "Noto Serif", serif;
-  color: rgba(241, 241, 241, 0.698);
+  color: rgb(133, 133, 133);
 }
 
 .body_trofeo {
@@ -1057,6 +1057,19 @@ div article p {
   gap: 130px;
 }
 
+@media (min-width: 370px) and (max-width: 450px) {
+  .anillo {
+    width: 390px;
+    height: 730px;
+    overflow: hidden;
+    background-color: rgba(222, 219, 56, 0.587);
+    box-shadow: 0 0 0.2em rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+    transition-property: box-shadow;
+    transition-duration: 0.9s;
+    transition: all 300ms;
+  }
+}
 @media (min-width: 850px) {
   .anillo {
     width: 390px;
