--- a/scss/components/_tarjeta_trofeo.scss
+++ b/scss/components/_tarjeta_trofeo.scss
@@ -36,7 +36,7 @@
   text-align: center;
   font-size: 1.2rem;
   font-family: "Noto Serif", serif;
-  color: rgba(241, 241, 241, 0.698);
+  color: rgb(133, 133, 133);
 }
 
 .body_trofeo {
